TacticScopeTool/Projet07/Projet07/src/main/java/com/example/projet07/parsers/availability/AvailabilityTacticParser.java
package com.example.projet07.parsers.availability;

/* SecurityTacticParser.java */
/* Generated By:JavaCC: Do not edit this line. SecurityTacticParser.java */
import java.io.InputStreamReader;
import java.io.InputStream;
import java.util.ArrayList;
import java.util.List;
import com.example.projet07.parsers.shared.*;

public class AvailabilityTacticParser implements AvailabilityTacticParserConstants {

    private InputStreamReader inputReader;
    public boolean tacticFound;
    public boolean CorrectSyntax;
    public List<String> occurrenceStrings = new ArrayList<>();

    //Call class that saves caller method and callee of each method
    private static class CallRelationship {
        String caller;
        String callee;
        String method;

        public CallRelationship(String caller, String callee, String method) {
            this.caller = caller;
            this.callee = callee;
            this.method = method;
        }


        public boolean isSelfCall() {
            return caller.equals(callee);
        }
    }

    //Occurrence list that saves all entities, start and pattern of each occurrence of the tactic    
    public static class Occurrence {
        String SenderEntity;
        String ReceiverEntity;
        String MonitorEntity;
        int startPosition;
        List<CallRelationship> PatternCalls;

        public Occurrence( String SenderEntity, String ReceiverEntity, int startPosition, List<CallRelationship> PatternCalls) {
            this.SenderEntity = SenderEntity;
            this.ReceiverEntity = ReceiverEntity;
            this.startPosition = startPosition;
            this.PatternCalls = new ArrayList<>(PatternCalls);

        }

        public Occurrence( String SenderEntity, String ReceiverEntity, String MonitorEntity, int startPosition, List<CallRelationship> PatternCalls) {
            this.SenderEntity = SenderEntity;
            this.ReceiverEntity = ReceiverEntity;
            this.MonitorEntity = MonitorEntity;
            this.startPosition = startPosition;
            this.PatternCalls = new ArrayList<>(PatternCalls);

        }


    }


    // State machine for pattern matching
    private enum State {
        LOOKING_FOR_PING_CALL,
        LOOKING_FOR_OPTIONAL_NOTIFY_CALL,
        LOOKING_FOR_OPTIONAL_HANDLE_CALL,
        LOOKING_FOR_ECHO_CALL,
        LOOKING_FOR_ITERATION_PING_CALL,
        LOOKING_FOR_ITERATION_OPTIONAL_NOTIFY_CALL,
        LOOKING_FOR_ITERATION_OPTIONAL_HANDLE_CALL,
        LOOKING_FOR_ITERATION_ECHO_CALL,
        PATTERN_FOUND
    }

    // List to store all call relationships from the trace file
    private static List<CallRelationship> callRelationships = new ArrayList<>();

    //List to store the infos of each detected Occurrence
    public static List<Occurrence> TotalOccurrences = new ArrayList<>();

    //constructor
    public AvailabilityTacticParser(InputStream input) {
        callRelationships.clear();
        this.inputReader = new InputStreamReader(input);
        ReInit(this.inputReader);
        try {
            ExecutionTrace();
            CorrectSyntax = true;
        } catch (ParseException e){
            CorrectSyntax = false;
        }
    }


    private static void detectPingEchoTactic() {
        // Use a state machine approach for pattern matching
        State currentState = State.LOOKING_FOR_PING_CALL;
        String SenderEntity = null;
        String ReceiverEntity = null;
        String MonitorEntity = null;
        int startPosition = 0;
        int itStart = 0;

        List<CallRelationship> patternCalls = new ArrayList<>();
        List<CallRelationship> iterationCalls = new ArrayList<>();

        boolean monitor = false;
        boolean loop = false;

        for (int i = 0; i < callRelationships.size(); i++) {
            CallRelationship call = callRelationships.get(i);

            switch (currentState) {
                case LOOKING_FOR_PING_CALL:
                    // Step 1: recording caller and callee for future checking          
                    if(!call.isSelfCall()) {
                        SenderEntity = call.caller;
                        ReceiverEntity = call.callee;
                        startPosition = i;
                        patternCalls.clear();
                        patternCalls.add(call);
                        currentState = State.LOOKING_FOR_OPTIONAL_NOTIFY_CALL;
                    }
                    break;

                case LOOKING_FOR_OPTIONAL_NOTIFY_CALL:
                    // Step 2: Look for optional exception handling
                    if (call.caller.equals(SenderEntity) && !call.callee.equals(ReceiverEntity) && !call.isSelfCall()) {
                        MonitorEntity = call.callee;
                        monitor = true;
                        patternCalls.add(call);
                        currentState = State.LOOKING_FOR_OPTIONAL_HANDLE_CALL;
                    } else {
                        // Optional block not found, searching for the last echo call
                        i--;
                        currentState = State.LOOKING_FOR_ECHO_CALL;
                    }
                    break;

                case LOOKING_FOR_OPTIONAL_HANDLE_CALL:
                    // Step 3: Look for corresponding caller-callee relationship
                    if (call.caller.equals(MonitorEntity) && call.isSelfCall()) {
                        patternCalls.add(call);
                        currentState = State.LOOKING_FOR_ECHO_CALL;
                    }  else {
                        // Pattern broken, restart from next position after initial match
                        i = startPosition;
                        currentState = State.LOOKING_FOR_PING_CALL;
                    }
                    break;

                case LOOKING_FOR_ECHO_CALL:
                    // Step 4: Look for last potential method call in a single iteration
                    if (call.caller.equals(ReceiverEntity) && call.callee.equals(SenderEntity)) {
                        patternCalls.add(call);
                        if ( i+1 >= callRelationships.size()) {
                            i--;
                            currentState = State.PATTERN_FOUND;
                        } else {
                            currentState = State.LOOKING_FOR_ITERATION_PING_CALL;
                        }
                    } else {
                        // Pattern broken, restart from next position after first match
                        i = startPosition;
                        currentState = State.LOOKING_FOR_PING_CALL;
                    }
                    break;

                case LOOKING_FOR_ITERATION_PING_CALL:
                    //checking if other iterations exist starting from the ping call
                    if(call.caller.equals(SenderEntity) && call.callee.equals(ReceiverEntity)) {
                        loop = true;
                        itStart = i-1;
                        iterationCalls.clear();
                        iterationCalls.add(call);
                        currentState = State.LOOKING_FOR_ITERATION_OPTIONAL_NOTIFY_CALL;
                    } else {
                        i = i-2;
                        currentState = State.PATTERN_FOUND;
                    }
                    break;

                case LOOKING_FOR_ITERATION_OPTIONAL_NOTIFY_CALL:
                    //checking if this iteration had an exception block
                    if(!MonitorEntity.equals("null")) {
                        if(call.caller.equals(SenderEntity) && call.callee.equals(MonitorEntity)) {
                            iterationCalls.add(call);
                            currentState = State.LOOKING_FOR_ITERATION_OPTIONAL_HANDLE_CALL;
                        } else {
                            i--;
                            currentState = State.LOOKING_FOR_ITERATION_ECHO_CALL;
                        }
                    } else {
                        if(call.caller.equals(SenderEntity) && !call.isSelfCall() && !call.callee.equals(ReceiverEntity)) {
                            MonitorEntity = call.callee;
                            monitor = true;
                            iterationCalls.add(call);
                            currentState = State.LOOKING_FOR_ITERATION_OPTIONAL_HANDLE_CALL;
                        } else {
                            i--;
                            currentState = State.LOOKING_FOR_ITERATION_ECHO_CALL;
                        }
                    }
                    break;

                case LOOKING_FOR_ITERATION_OPTIONAL_HANDLE_CALL:
                    if(call.caller.equals(MonitorEntity) && call.isSelfCall()) {
                        iterationCalls.add(call);
                        currentState = State.LOOKING_FOR_ITERATION_ECHO_CALL;
                    } else {
                        MonitorEntity = "null";
                        currentState = State.PATTERN_FOUND;
                        i = itStart-1;
                    }
                    break;

                case LOOKING_FOR_ITERATION_ECHO_CALL:
                    if(call.caller.equals(ReceiverEntity) && call.callee.equals(SenderEntity)) {
                        iterationCalls.add(call);
                        patternCalls.addAll(iterationCalls);
                        currentState = State.LOOKING_FOR_ITERATION_PING_CALL;
                    } else {
                        currentState = State.PATTERN_FOUND;
                        i = itStart-1;
                    }
                    break;

                case PATTERN_FOUND:
                    if(monitor) {
                        TotalOccurrences.add(new Occurrence(SenderEntity, ReceiverEntity, MonitorEntity, startPosition, patternCalls));
                    } else {
                        TotalOccurrences.add(new Occurrence(SenderEntity, ReceiverEntity, startPosition, patternCalls));
                    }
                    currentState = State.LOOKING_FOR_PING_CALL;
                    MonitorEntity = "null";
                    monitor = false;
                    loop = false;
                    break;
            }

            if ( i+1 >= callRelationships.size() && loop) {
                i--;
                currentState = State.PATTERN_FOUND;
            }
        }
    }

    public void buildPrintedContent() {
        // Iterate over the occurrences and add details to the string
        for (int i = 0; i < TotalOccurrences.size(); i++) {
            StringBuilder contentBuilder = new StringBuilder();
            Occurrence occ = TotalOccurrences.get(i);
            contentBuilder.append("Occurrence ").append(i + 1).append(":\n\n");
            contentBuilder.append("PingSender Entity: ").append(occ.SenderEntity).append("\n");
            contentBuilder.append("FaultMonitor Entity: ").append(occ.MonitorEntity).append("\n");
            contentBuilder.append("PingReceiver Entity: ").append(occ.ReceiverEntity).append("\n");

            int line = occ.startPosition;
            contentBuilder.append("\nStarting line ").append(++line).append("\n\n");

            for (CallRelationship call : occ.PatternCalls) {
                contentBuilder.append(line).append(" CALLER:").append(call.caller).append(",METHOD:").append(call.method).append(",CALLEE:").append(call.callee).append(";\n");
                line++;
            }
            occurrenceStrings.add(contentBuilder.toString());
        }
    }

    public void parse() {
        TotalOccurrences.clear();
        occurrenceStrings.clear();
        try {
            detectPingEchoTactic();
            if (!TotalOccurrences.isEmpty()) {
                tacticFound = true;
                buildPrintedContent();
            } else {
                tacticFound = false;
            }
        } catch (Exception e) {
            tacticFound = false;
        }
    }

    final public void ExecutionTrace() throws ParseException {
        label_1:
        while (true) {
            switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
                case CALLER:{
                    ;
                    break;
                }
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
            CallStatement();
        }
        jj_consume_token(0);
    }

    final public void CallStatement() throws ParseException {Token caller, method, callee;
        jj_consume_token(CALLER);
        caller = jj_consume_token(LITERAL);
        jj_consume_token(COMMA);
        jj_consume_token(METHOD);
        method = jj_consume_token(LITERAL);
        jj_consume_token(COMMA);
        jj_consume_token(CALLEE);
        callee = jj_consume_token(LITERAL);
        jj_consume_token(SEMICOLON);
//storing caller, method and callee of each line
        callRelationships.add(new CallRelationship(caller.image, callee.image, method.image));
    }

    /** Generated Token Manager. */
    public AvailabilityTacticParserTokenManager token_source;
    SimpleCharStream jj_input_stream;
    /** Current token. */
    public Token token;
    /** Next token. */
    public Token jj_nt;
    private int jj_ntk;
    private int jj_gen;
    final private int[] jj_la1 = new int[1];
    static private int[] jj_la1_0;
    static {
        jj_la1_init_0();
    }
    private static void jj_la1_init_0() {
        jj_la1_0 = new int[] {0x40,};
    }

    /** Constructor with InputStream and supplied encoding */
    public AvailabilityTacticParser(java.io.InputStream stream, String encoding) {
        try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
        token_source = new AvailabilityTacticParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 1; i++) jj_la1[i] = -1;
    }

    /** Reinitialise. */
    public void ReInit(java.io.InputStream stream) {
        ReInit(stream, null);
    }
    /** Reinitialise. */
    public void ReInit(java.io.InputStream stream, String encoding) {
        try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 1; i++) jj_la1[i] = -1;
    }

    /** Constructor. */
    public AvailabilityTacticParser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new AvailabilityTacticParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 1; i++) jj_la1[i] = -1;
    }

    /** Reinitialise. */
    public void ReInit(java.io.Reader stream) {
        if (jj_input_stream == null) {
            jj_input_stream = new SimpleCharStream(stream, 1, 1);
        } else {
            jj_input_stream.ReInit(stream, 1, 1);
        }
        if (token_source == null) {
            token_source = new AvailabilityTacticParserTokenManager(jj_input_stream);
        }

        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 1; i++) jj_la1[i] = -1;
    }

    /** Constructor with generated Token Manager. */
    public AvailabilityTacticParser(AvailabilityTacticParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 1; i++) jj_la1[i] = -1;
    }

    /** Reinitialise. */
    public void ReInit(AvailabilityTacticParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 1; i++) jj_la1[i] = -1;
    }

    private Token jj_consume_token(int kind) throws ParseException {
        Token oldToken;
        if ((oldToken = token).next != null) token = token.next;
        else token = token.next = token_source.getNextToken();
        jj_ntk = -1;
        if (token.kind == kind) {
            jj_gen++;
            return token;
        }
        token = oldToken;
        jj_kind = kind;
        throw generateParseException();
    }


    /** Get the next Token. */
    final public Token getNextToken() {
        if (token.next != null) token = token.next;
        else token = token.next = token_source.getNextToken();
        jj_ntk = -1;
        jj_gen++;
        return token;
    }

    /** Get the specific Token. */
    final public Token getToken(int index) {
        Token t = token;
        for (int i = 0; i < index; i++) {
            if (t.next != null) t = t.next;
            else t = t.next = token_source.getNextToken();
        }
        return t;
    }

    private int jj_ntk_f() {
        if ((jj_nt=token.next) == null)
            return (jj_ntk = (token.next=token_source.getNextToken()).kind);
        else
            return (jj_ntk = jj_nt.kind);
    }

    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;

    /** Generate ParseException. */
    public ParseException generateParseException() {
        jj_expentries.clear();
        boolean[] la1tokens = new boolean[11];
        if (jj_kind >= 0) {
            la1tokens[jj_kind] = true;
            jj_kind = -1;
        }
        for (int i = 0; i < 1; i++) {
            if (jj_la1[i] == jj_gen) {
                for (int j = 0; j < 32; j++) {
                    if ((jj_la1_0[i] & (1<<j)) != 0) {
                        la1tokens[j] = true;
                    }
                }
            }
        }
        for (int i = 0; i < 11; i++) {
            if (la1tokens[i]) {
                jj_expentry = new int[1];
                jj_expentry[0] = i;
                jj_expentries.add(jj_expentry);
            }
        }
        int[][] exptokseq = new int[jj_expentries.size()][];
        for (int i = 0; i < jj_expentries.size(); i++) {
            exptokseq[i] = jj_expentries.get(i);
        }
        return new ParseException(token, exptokseq, tokenImage);
    }

    private boolean trace_enabled;

    /** Trace enabled. */
    final public boolean trace_enabled() {
        return trace_enabled;
    }

    /** Enable tracing. */
    final public void enable_tracing() {
    }

    /** Disable tracing. */
    final public void disable_tracing() {
    }

}
